[gd_scene load_steps=15 format=3 uid="uid://bikea1ccjcfty"]

[ext_resource type="Script" path="res://level_1-1/level_1_1.gd" id="1_4ghg8"]
[ext_resource type="Texture2D" uid="uid://bx0i7tfdu3vgv" path="res://background_sprites/sun_transparent.png" id="1_ac5cc"]
[ext_resource type="Texture2D" uid="uid://defkmfbold48r" path="res://background_sprites/cactus.png" id="2_230mk"]
[ext_resource type="PackedScene" uid="uid://b1kdshi8tk8uv" path="res://enemies/goomba/goomba.tscn" id="3_qkdst"]
[ext_resource type="Texture2D" uid="uid://dfow1ut4y144n" path="res://background_sprites/cloud.png" id="3_sp4yc"]
[ext_resource type="Script" path="res://level_1-1/tile_replacer.gd" id="4_1ouct"]
[ext_resource type="PackedScene" uid="uid://b7f6g8y5baghx" path="res://pipe/pipe.tscn" id="4_wf0nj"]
[ext_resource type="Texture2D" uid="uid://bwpyryfbacsqw" path="res://background_sprites/hill_transparent.png" id="5_0s0qk"]
[ext_resource type="Texture2D" uid="uid://dkgxhrhbsk0s4" path="res://background_sprites/bush.png" id="5_w62rb"]
[ext_resource type="TileSet" uid="uid://c0ac15la4y45y" path="res://level_1-1/level_1_1.tres" id="7_0qp0f"]
[ext_resource type="PackedScene" uid="uid://x3f1qkrtcjn2" path="res://markerio/markario.tscn" id="9_ekekx"]
[ext_resource type="PackedScene" uid="uid://cl6qotx3gbyvf" path="res://flag/flag.tscn" id="13_nt0lh"]
[ext_resource type="PackedScene" uid="uid://d1xa63m8y6tp4" path="res://enemies/koopa/koopa.tscn" id="14_x2rod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u645c"]
size = Vector2(100000, 2000)

[node name="level_1-1" type="Node2D"]
script = ExtResource("1_4ghg8")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0)

[node name="SunTransparent" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(-744, -4408)
scale = Vector2(1.90496, 1.90496)
texture = ExtResource("1_ac5cc")

[node name="Cloud" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(1595.78, -3966.66)
scale = Vector2(2.19328, 2.19328)
texture = ExtResource("3_sp4yc")

[node name="Cloud2" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(10331.8, -5774.66)
rotation = 3.92699
scale = Vector2(2.58643, 3.33004)
texture = ExtResource("3_sp4yc")

[node name="Cloud3" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(22624, -4664)
scale = Vector2(2.19328, 2.19328)
texture = ExtResource("3_sp4yc")

[node name="Cloud4" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(30280, -4392)
rotation = 0.785397
scale = Vector2(2.30681, 2.88722)
texture = ExtResource("3_sp4yc")

[node name="Cloud5" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(51624, -5112)
rotation = 1.309
scale = Vector2(2.30681, 2.88722)
texture = ExtResource("3_sp4yc")

[node name="Cloud7" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(65104, -5344)
rotation = 3.40339
scale = Vector2(3.0672, 3.49867)
texture = ExtResource("3_sp4yc")

[node name="Cloud8" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(80392, -5224)
rotation = 3.92699
scale = Vector2(-2.47373, -2.82171)
texture = ExtResource("3_sp4yc")

[node name="Cloud9" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(97024, -4992)
rotation = 3.92699
scale = Vector2(-3.65814, -4.17274)
texture = ExtResource("3_sp4yc")

[node name="Cloud6" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(38152, -5224)
rotation = -2.35619
scale = Vector2(2.30681, 2.88722)
texture = ExtResource("3_sp4yc")

[node name="Cactus" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(62496, -1304)
rotation = 3.14159
scale = Vector2(1.10012, -1.09622)
texture = ExtResource("2_230mk")

[node name="Cactus2" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(53032, -1616)
rotation = 3.14159
scale = Vector2(2.05258, -1.96531)
texture = ExtResource("2_230mk")

[node name="Cactus3" type="Sprite2D" parent="ParallaxBackground/sky"]
position = Vector2(34264, -1344)
rotation = 3.14159
scale = Vector2(1.10012, -1.09622)
texture = ExtResource("2_230mk")

[node name="near_background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0)

[node name="Bush" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(21864, -1560)
scale = Vector2(2.33857, 2.45149)
texture = ExtResource("5_w62rb")

[node name="Bush3" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(26567.2, -1589.37)
scale = Vector2(2.62715, 3.34157)
texture = ExtResource("5_w62rb")

[node name="Bush2" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(27159.2, -1349.37)
scale = Vector2(1.48561, 1.33757)
texture = ExtResource("5_w62rb")

[node name="HillTransparent" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(584, -1908)
scale = Vector2(1.50765, 1.33953)
texture = ExtResource("5_0s0qk")

[node name="HillTransparent2" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(15542.5, -1888)
scale = Vector2(1.79156, 1.33953)
texture = ExtResource("5_0s0qk")
flip_h = true

[node name="HillTransparent3" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(42040, -1624)
texture = ExtResource("5_0s0qk")

[node name="HillTransparent4" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(77520, -1600)
scale = Vector2(0.868574, 0.7701)
texture = ExtResource("5_0s0qk")

[node name="Bush4" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(45928, -1456)
scale = Vector2(1.7124, 1.83991)
texture = ExtResource("5_w62rb")

[node name="Bush5" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(41320, -1208)
texture = ExtResource("5_w62rb")

[node name="Bush6" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(65696, -1344)
scale = Vector2(1.23952, 1.47267)
texture = ExtResource("5_w62rb")

[node name="HillTransparent5" type="Sprite2D" parent="ParallaxBackground/near_background"]
position = Vector2(98872, -2512)
scale = Vector2(2.07043, 2.07043)
texture = ExtResource("5_0s0qk")

[node name="enemies" type="Node2D" parent="."]

[node name="Goomba" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(7752, -1312)

[node name="Goomba2" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(15624, -1324)

[node name="Goomba3" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(20016, -1324)

[node name="Goomba4" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(20704, -1324)

[node name="Koopa" parent="enemies" instance=ExtResource("14_x2rod")]
position = Vector2(32384, -1544)

[node name="Goomba5" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(36720, -5384)

[node name="Goomba6" parent="enemies" instance=ExtResource("3_qkdst")]
position = Vector2(37584, -5400)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("7_0qp0f")
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(-65536, 196608, 0, -65535, 196608, 0, -65534, 196608, 0, -65533, 196608, 0, -65519, 196608, 0, -65520, 196608, 0, -65521, 196608, 0, -65522, 196608, 0, -65523, 196608, 0, -65524, 196608, 0, -65525, 196608, 0, -65526, 196608, 0, -65527, 196608, 0, -65528, 196608, 0, -65529, 196608, 0, -65530, 196608, 0, -65531, 196608, 0, -65532, 196608, 0, -131072, 196608, 0, -131071, 196608, 0, -131070, 196608, 0, -131068, 196608, 0, -131067, 196608, 0, -131066, 196608, 0, -131065, 196608, 0, -131064, 196608, 0, -131063, 196608, 0, -131062, 196608, 0, -131061, 196608, 0, -131060, 196608, 0, -131059, 196608, 0, -131058, 196608, 0, -131057, 196608, 0, -131056, 196608, 0, -131055, 196608, 0, -131054, 196608, 0, -131053, 196608, 0, -131052, 196608, 0, -131051, 196608, 0, -131050, 196608, 0, -131049, 196608, 0, -65518, 196608, 0, -65517, 196608, 0, -65516, 196608, 0, -65515, 196608, 0, -65514, 196608, 0, -65513, 196608, 0, -393210, 131072, 0, -393206, 0, 0, -393204, 0, 0, -393202, 0, 0, -393203, 131072, 0, -393205, 131072, 0, -655348, 131072, 0, -131048, 196608, 0, -131047, 196608, 0, -131046, 196608, 0, -131045, 196608, 0, -131044, 196608, 0, -131043, 196608, 0, -131042, 196608, 0, -131041, 196608, 0, -131040, 196608, 0, -65512, 196608, 0, -65511, 196608, 0, -65510, 196608, 0, -65509, 196608, 0, -65508, 196608, 0, -65507, 196608, 0, -65506, 196608, 0, -65505, 196608, 0, -65504, 196608, 0, -65503, 196608, 0, -131039, 196608, 0, -131038, 196608, 0, -131037, 196608, 0, -131036, 196608, 0, -65502, 196608, 0, -65501, 196608, 0, -65500, 196608, 0, -131035, 196608, 0, -131034, 196608, 0, -131033, 196608, 0, -131032, 196608, 0, -131031, 196608, 0, -131030, 196608, 0, -131029, 196608, 0, -131028, 196608, 0, -131027, 196608, 0, -131026, 196608, 0, -131025, 196608, 0, -65499, 196608, 0, -65498, 196608, 0, -65497, 196608, 0, -65496, 196608, 0, -65495, 196608, 0, -65494, 196608, 0, -65493, 196608, 0, -65492, 196608, 0, -65491, 196608, 0, -65490, 196608, 0, -65489, 196608, 0, -65488, 196608, 0, -65487, 196608, 0, -65486, 196608, 0, -65485, 196608, 0, -65484, 196608, 0, -65483, 196608, 0, -131024, 196608, 0, -131023, 196608, 0, -131022, 196608, 0, -131021, 196608, 0, -131020, 196608, 0, -131019, 196608, 0, -65482, 196608, 0, -65481, 196608, 0, -131018, 196608, 0, -131017, 196608, 0, -589817, 262144, 0, -589816, 262144, 0, -589815, 262144, 0, -131069, 196608, 0, -65537, 196608, 0, -65538, 196608, 0, -65539, 196608, 0, -65540, 196608, 0, -65547, 196608, 0, -65541, 196608, 0, -65542, 196608, 0, -65543, 196608, 0, -65544, 196608, 0, -65545, 196608, 0, -65546, 196608, 0, -65548, 196608, 0, -65549, 196608, 0, -65550, 196608, 0, -65551, 196608, 0, -1, 196608, 0, -2, 196608, 0, -3, 196608, 0, -4, 196608, 0, -5, 196608, 0, -6, 196608, 0, -7, 196608, 0, -8, 196608, 0, -9, 196608, 0, -10, 196608, 0, -11, 196608, 0, -12, 196608, 0, -13, 196608, 0, -14, 196608, 0, -15, 196608, 0, -65552, 196608, 0, -65553, 196608, 0, -65554, 196608, 0, -65555, 196608, 0, -65556, 196608, 0, -65557, 196608, 0, -16, 196608, 0, -17, 196608, 0, -18, 196608, 0, -19, 196608, 0, -20, 196608, 0, -21, 196608, 0, -22, 196608, 0, -23, 196608, 0, -65558, 196608, 0, -65559, 196608, 0, -65560, 196608, 0, -65561, 196608, 0, -24, 196608, 0, -25, 196608, 0, -65478, 196608, 0, -65477, 196608, 0, -65476, 196608, 0, -65475, 196608, 0, -65474, 196608, 0, -131011, 196608, 0, -131012, 196608, 0, -131013, 196608, 0, -131014, 196608, 0, -131010, 196608, 0, -131009, 196608, 0, -65473, 196608, 0, -131008, 196608, 0, -65472, 196608, 0, -131007, 196608, 0, -65471, 196608, 0, -131006, 196608, 0, -65470, 196608, 0, -131005, 196608, 0, -65469, 196608, 0, -131004, 196608, 0, -65468, 196608, 0, -131003, 196608, 0, -65467, 196608, 0, -131002, 196608, 0, -65466, 196608, 0, -131001, 196608, 0, -65465, 196608, 0, -393153, 0, 0, -393151, 0, 0, -393152, 131072, 0, -655294, 0, 0, -655293, 0, 0, -655292, 0, 0, -655291, 0, 0, -655290, 0, 0, -655289, 0, 0, -655288, 0, 0, -655287, 0, 0, -130997, 196608, 0, -130996, 196608, 0, -130995, 196608, 0, -130994, 196608, 0, -130993, 196608, 0, -130992, 196608, 0, -130991, 196608, 0, -130990, 196608, 0, -130989, 196608, 0, -130988, 196608, 0, -130987, 196608, 0, -130986, 196608, 0, -130985, 196608, 0, -130984, 196608, 0, -130983, 196608, 0, -130982, 196608, 0, -130981, 196608, 0, -130980, 196608, 0, -130979, 196608, 0, -130978, 196608, 0, -130977, 196608, 0, -130976, 196608, 0, -655283, 0, 0, -655282, 0, 0, -655281, 0, 0, -655280, 131072, 0, -393136, 131072, 0, -393131, 0, 0, -393130, 0, 0, -393126, 131072, 0, -393123, 131072, 0, -393120, 131072, 0, -655267, 131072, 0, -130975, 196608, 0, -65439, 196608, 0, -130974, 196608, 0, -65438, 196608, 0, -130973, 196608, 0, -65437, 196608, 0, -130972, 196608, 0, -65436, 196608, 0, -130971, 196608, 0, -65435, 196608, 0, -130970, 196608, 0, -65434, 196608, 0, -130969, 196608, 0, -65433, 196608, 0, -130968, 196608, 0, -65432, 196608, 0, -130967, 196608, 0, -65431, 196608, 0, -130966, 196608, 0, -65430, 196608, 0, -130965, 196608, 0, -65429, 196608, 0, -130964, 196608, 0, -65428, 196608, 0, -130963, 196608, 0, -65427, 196608, 0, -130962, 196608, 0, -65426, 196608, 0, -130961, 196608, 0, -65425, 196608, 0, -130960, 196608, 0, -65424, 196608, 0, -130959, 196608, 0, -65423, 196608, 0, -130958, 196608, 0, -65422, 196608, 0, -65461, 196608, 0, -65460, 196608, 0, -65459, 196608, 0, -65458, 196608, 0, -65457, 196608, 0, -65456, 196608, 0, -65455, 196608, 0, -65454, 196608, 0, -65453, 196608, 0, -65452, 196608, 0, -65451, 196608, 0, -65450, 196608, 0, -65449, 196608, 0, -65448, 196608, 0, -65447, 196608, 0, -65446, 196608, 0, -65445, 196608, 0, -65444, 196608, 0, -65443, 196608, 0, -65442, 196608, 0, -65441, 196608, 0, -65440, 196608, 0, -393115, 0, 0, -655256, 0, 0, -655255, 0, 0, -655254, 0, 0, -655249, 0, 0, -655246, 0, 0, -393104, 0, 0, -393103, 0, 0, -655248, 131072, 0, -655247, 131072, 0, -130957, 196608, 0, -65421, 196608, 0, -130956, 196608, 0, -65420, 196608, 0, -130955, 196608, 0, -65419, 196608, 0, -130954, 196608, 0, -65418, 196608, 0, -130953, 196608, 0, -65417, 196608, 0, -130952, 196608, 0, -65416, 196608, 0, -130951, 196608, 0, -65415, 196608, 0, -130950, 196608, 0, -65414, 196608, 0, -130949, 196608, 0, -65413, 196608, 0, -130948, 196608, 0, -65412, 196608, 0, -130947, 196608, 0, -65411, 196608, 0, -130946, 196608, 0, -65410, 196608, 0, -130945, 196608, 0, -65409, 196608, 0, -130944, 196608, 0, -65408, 196608, 0, -130943, 196608, 0, -65407, 196608, 0, -130942, 196608, 0, -65406, 196608, 0, -196491, 65536, 0, -262026, 65536, 0, -327561, 65536, 0, -393096, 65536, 0, -327560, 65536, 0, -262024, 65536, 0, -196488, 65536, 0, -196489, 65536, 0, -262025, 65536, 0, -196490, 65536, 0, -196485, 65536, 0, -262021, 65536, 0, -393093, 65536, 0, -327556, 65536, 0, -327557, 65536, 0, -262020, 65536, 0, -196484, 65536, 0, -196483, 65536, 0, -262019, 65536, 0, -196482, 65536, 0, -196477, 65536, 0, -196476, 65536, 0, -262012, 65536, 0, -262011, 65536, 0, -196475, 65536, 0, -327547, 65536, 0, -393082, 65536, 0, -327546, 65536, 0, -262010, 65536, 0, -196474, 65536, 0, -393079, 65536, 0, -327542, 65536, 0, -262006, 65536, 0, -262005, 65536, 0, -196469, 65536, 0, -196468, 65536, 0, -196470, 65536, 0, -196471, 65536, 0, -262007, 65536, 0, -327543, 65536, 0, -130941, 196608, 0, -65405, 196608, 0, -130940, 196608, 0, -65404, 196608, 0, -130939, 196608, 0, -65403, 196608, 0, -130938, 196608, 0, -65402, 196608, 0, -130935, 196608, 0, -65399, 196608, 0, -130934, 196608, 0, -65398, 196608, 0, -130933, 196608, 0, -65397, 196608, 0, -130932, 196608, 0, -65396, 196608, 0, -130931, 196608, 0, -65395, 196608, 0, -130930, 196608, 0, -65394, 196608, 0, -130929, 196608, 0, -65393, 196608, 0, -130928, 196608, 0, -65392, 196608, 0, -130927, 196608, 0, -65391, 196608, 0, -130926, 196608, 0, -65390, 196608, 0, -130925, 196608, 0, -65389, 196608, 0, -130924, 196608, 0, -65388, 196608, 0, -130923, 196608, 0, -65387, 196608, 0, -130922, 196608, 0, -65386, 196608, 0, -130921, 196608, 0, -65385, 196608, 0, -130920, 196608, 0, -65384, 196608, 0, -130919, 196608, 0, -65383, 196608, 0, -130918, 196608, 0, -65382, 196608, 0, -130917, 196608, 0, -65381, 196608, 0, -130916, 196608, 0, -65380, 196608, 0, -130915, 196608, 0, -65379, 196608, 0, -130914, 196608, 0, -65378, 196608, 0, -130913, 196608, 0, -65377, 196608, 0, -130912, 196608, 0, -65376, 196608, 0, -196448, 65536, 0, -261983, 65536, 0, -327518, 65536, 0, -393053, 65536, 0, -458588, 65536, 0, -524123, 65536, 0, -589658, 65536, 0, -655193, 65536, 0, -655192, 65536, 0, -589656, 65536, 0, -524120, 65536, 0, -458584, 65536, 0, -393048, 65536, 0, -327512, 65536, 0, -261976, 65536, 0, -196440, 65536, 0, -196441, 65536, 0, -196442, 65536, 0, -196443, 65536, 0, -196444, 65536, 0, -196445, 65536, 0, -196446, 65536, 0, -196447, 65536, 0, -261981, 65536, 0, -261980, 65536, 0, -261979, 65536, 0, -261978, 65536, 0, -261977, 65536, 0, -327513, 65536, 0, -393049, 65536, 0, -458585, 65536, 0, -524121, 65536, 0, -589657, 65536, 0, -524122, 65536, 0, -458586, 65536, 0, -458587, 65536, 0, -393051, 65536, 0, -393052, 65536, 0, -393050, 65536, 0, -327514, 65536, 0, -327515, 65536, 0, -327516, 65536, 0, -327517, 65536, 0, -261982, 65536, 0, -130911, 196608, 0, -130910, 196608, 0, -130909, 196608, 0, -130908, 196608, 0, -130907, 196608, 0, -130906, 196608, 0, -130905, 196608, 0, -130904, 196608, 0, -65368, 196608, 0, -65369, 196608, 0, -65370, 196608, 0, -65371, 196608, 0, -65372, 196608, 0, -65373, 196608, 0, -65374, 196608, 0, -65375, 196608, 0, -65367, 196608, 0, -65366, 196608, 0, -65365, 196608, 0, -65364, 196608, 0, -65363, 196608, 0, -65362, 196608, 0, -130898, 196608, 0, -130899, 196608, 0, -130900, 196608, 0, -130901, 196608, 0, -130902, 196608, 0, -130903, 196608, 0, -130897, 196608, 0, -65361, 196608, 0, -130896, 196608, 0, -65360, 196608, 0, -130895, 196608, 0, -65359, 196608, 0, -130894, 196608, 0, -65358, 196608, 0, -130893, 196608, 0, -65357, 196608, 0, -130892, 196608, 0, -65356, 196608, 0, -130891, 196608, 0, -65355, 196608, 0, -130890, 196608, 0, -65354, 196608, 0, -130889, 196608, 0, -65353, 196608, 0, -130888, 196608, 0, -65352, 196608, 0, -130887, 196608, 0, -65351, 196608, 0, -130886, 196608, 0, -65350, 196608, 0, -130885, 196608, 0, -65349, 196608, 0, -130884, 196608, 0, -65348, 196608, 0, -130883, 196608, 0, -65347, 196608, 0, -130882, 196608, 0, -65346, 196608, 0, -130881, 196608, 0, -65345, 196608, 0, -130880, 196608, 0, -65344, 196608, 0, -130879, 196608, 0, -65343, 196608, 0, -130878, 196608, 0, -65342, 196608, 0, -130877, 196608, 0, -65341, 196608, 0, -130876, 196608, 0, -65340, 196608, 0, -130875, 196608, 0, -65339, 196608, 0, -130874, 196608, 0, -65338, 196608, 0, -130873, 196608, 0, -65337, 196608, 0, -130872, 196608, 0, -65336, 196608, 0, -131078, 196608, 0, -196614, 196608, 0, -262150, 196608, 0, -327686, 196608, 0, -393222, 196608, 0, -458758, 196608, 0, -524294, 196608, 0, -589830, 196608, 0, -655366, 196608, 0, -720902, 196608, 0, -786438, 196608, 0, -851974, 196608, 0, -917510, 196608, 0, -983046, 196608, 0, -1048582, 196608, 0, -196432, 65536, 0)
layer_1/name = "items"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-393206, 262144, 0, -393205, 393216, 0, -393136, 458752, 0)
script = ExtResource("4_1ouct")

[node name="blocks" type="Node2D" parent="TileMap"]

[node name="coins" type="Node2D" parent="TileMap"]

[node name="pipes" type="Node2D" parent="."]
z_index = -1

[node name="Pipe" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(23624, -1920)

[node name="Pipe2" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(18448, -1920)

[node name="Pipe3" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(10304, -888)

[node name="Pipe4" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(13912, -1336)

[node name="Pipe5" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(74360, -928)

[node name="Pipe6" parent="pipes" instance=ExtResource("4_wf0nj")]
position = Vector2(81416, -816)

[node name="top_left" type="Marker2D" parent="."]
position = Vector2(-3608, -11056)

[node name="Markerio" parent="." instance=ExtResource("9_ekekx")]
position = Vector2(42552, -2168)

[node name="markerio_spawn_point" type="Marker2D" parent="."]
position = Vector2(-976, -1832)

[node name="killfloor" type="Area2D" parent="."]
position = Vector2(41856, 1008)
collision_layer = 0
collision_mask = 65535

[node name="CollisionShape2D" type="CollisionShape2D" parent="killfloor"]
position = Vector2(16, 792)
shape = SubResource("RectangleShape2D_u645c")

[node name="Flag" parent="." instance=ExtResource("13_nt0lh")]
position = Vector2(90405, -2939)

[connection signal="body_entered" from="killfloor" to="." method="_on_killfloor_body_entered"]
